
  [ Vincent Cheng ]
  * Remove myself from Uploaders.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 21 Jul 2021 14:45:24 +0200

nvidia-graphics-drivers (390.144-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.144 (2021-07-20).
    * Fixed CVE-2021-1093, CVE-2021-1094, CVE-2021-1095.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5211

 -- Andreas Beckmann <anbe@debian.org>  Wed, 21 Jul 2021 14:45:24 +0200

nvidia-graphics-drivers (390.143-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.143 (2021-04-19).
    * Fixed CVE-2021-1076.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5172
    - Fixed a bug where vkCreateSwapchain could cause the X Server to crash
      when an invalid imageFormat was provided.
    - Fixed a driver installation failure on Linux kernel 5.11 release
      candidates, where the NVIDIA kernel module failed to build with error
      "fatal error: asm/kmap_types.h: No such file or directory".

 -- Andreas Beckmann <anbe@debian.org>  Mon, 19 Apr 2021 22:38:56 +0200

nvidia-graphics-drivers (390.141-1) UNRELEASED; urgency=medium

  * New upstream legacy branch release 390.141 (2021-01-07).
    * Fixed CVE-2021-1056.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5142
    - Fixed a driver installation failure on Linux kernel 5.8 release
      candidates, where the NVIDIA kernel module failed to build with error
      "'struct mm_struct' has no member named 'mmap_sem'".
    - Fixed a driver installation failure on Linux kernel 5.8 release
      candidates, where the NVIDIA kernel module failed to build with error
      "too many arguments to function '__vmalloc'".
    * Improved compatibility with recent Linux kernels.

  [ Andreas Beckmann ]
  * Refresh patches.
  * Update glvnd symbols files.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Sun, 10 Jan 2021 03:31:58 +0100

nvidia-graphics-drivers (390.138-4) UNRELEASED; urgency=medium
