@@ -5,7 +5,7 @@ Description: Redefine WRITE_COMBINE_FLUSH on ARM on kernel >= 4.3
  is defined. Fall back to no memory barrier at all if that is not configured.
 --- a/common/inc/nv-linux.h
 +++ b/common/inc/nv-linux.h
-@@ -470,7 +470,13 @@ extern int nv_pat_mode;
+@@ -469,7 +469,13 @@ extern int nv_pat_mode;
  #if defined(CONFIG_OUTER_CACHE)
  #define OUTER_FLUSH_RANGE(start, end)   outer_flush_range((start),(end))
  #endif
