@@ -24,7 +24,7 @@ Description: Undef CONFIG_XEN and CONFIG_XEN_DOM0 if building on ARM
  #if LINUX_VERSION_CODE < KERNEL_VERSION(2, 6, 9)
  #error "This driver does not support kernels older than 2.6.9!"
  #elif LINUX_VERSION_CODE < KERNEL_VERSION(2, 7, 0)
-@@ -285,7 +290,7 @@ NV_STATUS nvos_forward_error_to_cray(str
+@@ -284,7 +289,7 @@ NV_STATUS nvos_forward_error_to_cray(str
   * NVIDIA graphics driver has no way of knowing and is unlikely
   * to work correctly.
   */
